@@ -38,6 +38,7 @@ f6e8bf3c472892c34bcb7aebb7cada0215e672c0 assets\createbigcannons\models\item\ap_
 598ec11aa5efd0f67a85a947fdbf99a96915dbdc data\createbigcannons\loot_tables\blocks\wrought_iron_cannon_chamber.json
 91d042d44c0a79e4f6d190d0be0e72c28fd754e6 assets\createbigcannons\models\block\cast_iron_autocannon_barrel_flanged.json
 2d2a1c8aa2e9341b999cf0b4cacd294fb5a6e209 data\createbigcannons\loot_tables\boring_scrap\unbored_steel_autocannon_recoil_spring.json
+b62bf6e652d88e15a542ad7a5a4a3c78f099be59 data\createbigcannons\recipes\fuze_removal.json
 bf7417fc4bd546fc51404572e3c0837029109bdf assets\createbigcannons\models\item\steel_autocannon_barrel.json
 cc7b139e42e0c3c8e08f76950eae4ae7cc018ae9 data\createbigcannons\advancements\recipes\createbigcannons\powder_charge.json
 e2f7828cb7fad909a67c95997fc576900f3a9532 data\createbigcannons\loot_tables\boring_scrap\unbored_bronze_autocannon_breech.json
@@ -738,6 +739,7 @@ e55d51ae7c258f74595ef1d418854b6d7c9895e6 data\createbigcannons\block_recipes\unb
 ecfdc849c1174ff94a941c45916299a9abcf3e9d data\createbigcannons\recipes\quickfiring_mechanism.json
 f7b643a037c1d7844589328a166839322ea80df1 data\createbigcannons\advancements\recipes\createbigcannons\bronze_sliding_breechblock.json
 694be8dfe3d3499fcbbe6772b44a772566e10526 assets\createbigcannons\models\item\nethersteel_cannon_barrel.json
+eacf7b2b5e54bd5740264fa3061859e7ed313a11 data\createbigcannons\recipes\tracer_removal.json
 a076a29645a51c52dd8d13019b9bfc629b657eaf assets\createbigcannons\models\block\bronze_cannon_chamber.json
 adcad1c16f5247dbc55b53f298e61f625523d31c assets\createbigcannons\models\item\big_cartridge.json
 1062db46ea9fe9d7674ee862c68c46cad59505f1 data\createbigcannons\block_recipes\incomplete_steel_autocannon_breech.json
